[project]
name = "hexlet-code"
version = "0.1.0"
description = """
«Brain Games» is a collection of five console-based games designed to train your brain.
Each game offers unique challenges to help improve your cognitive skills.
The games include:
- Calculator: Solve arithmetic expressions.
- Progression: Find missing numbers in a sequence.
- Even Number: Determine if a number is even.
- Greatest Common Divisor: Find the greatest common divisor of two numbers.
- Prime Number: Determine if a number is prime.
After three correct answers, the game is considered completed. An incorrect answer ends the game and prompts you to try again.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
